[project]
name = "nsfw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "glom>=24.11.0",
    "langchain[openai]>=0.3.25",
    "langsmith>=0.3.45",
    "nicegui>=2.19.0",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
]
