[project]
name = "nsfw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "glom>=24.11.0",
    "gppt>=4.1.1",
    "langchain[openai]>=0.3.25",
    "langsmith>=0.3.45",
    "pixivpy3>=3.7.5",
    "pydantic>=2.11.5",
    "streamlit>=1.45.1",
]
